# benchmark_eigen_mkl

./: .gitignore  CMakeLists.txt  benchmark_dgemm.cpp  benchmark_madd.cpp
cmake/: FindMKL.cmake
include/: debug.hpp  fixture.hpp  mkl_utils.hpp  random_vector.hpp
test/: dgemm.cpp
